Bejövő header kezelése
